[package]
name = "command_processor"
version = "0.1.0"
edition = "2021"
description = "A command processor for embedded systems"
license = "MIT OR Apache-2.0"
keywords = ["embedded", "command", "processor"]
authors = ["David Christopher Lynch <david.lynch.home@gmail.com>"]
repository = "https://github.com/dlly11/command-processor"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
heapless = "0.7.0"
